--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,5 +53,14 @@ jobs:
 
     - name: Publish to Ansible Galaxy
       env:
-        ANSIBLE_COLLECTIONS_TOKEN: ${{ secrets.ANSIBLE_COLLECTIONS_TOKEN }}
-      run: docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace ghcr.io/${{ github.repository_owner }}/ansible-image:latest ansible-galaxy collection publish *.tar.gz --api-key $ANSIBLE_COLLECTIONS_TOKEN
+        COLLECTION_NAME: "hitachivantara.vspone_block"
+        VERSION: "3.0.0-223"
+        API_KEY: ${{ secrets.ANSIBLE_COLLECTIONS_TOKEN }}
+      run: |
+        # Attempt to delete the existing collection (if supported)
+        # Note: This step requires API support for deletion
+        # Uncomment the line below if your Galaxy server supports API deletion
+        curl -X DELETE "https://galaxy-server/api/collections/$COLLECTION_NAME/$VERSION/" -H "Authorization: Token $API_KEY"
+        
+        # Publish the collection
+        docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace ghcr.io/${{ github.repository_owner }}/ansible-image:latest ansible-galaxy collection publish *.tar.gz --api-key $API_KEY
