updated the publish file

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,7 +60,7 @@ jobs:
         # Attempt to delete the existing collection (if supported)
         # Note: This step requires API support for deletion
         # Uncomment the line below if your Galaxy server supports API deletion
-        curl -X DELETE "https://galaxy-server/api/collections/$COLLECTION_NAME/$VERSION/" -H "Authorization: Token $API_KEY"
+        curl -X DELETE "https://galaxy.ansible.com/api/v3/plugin/ansible/content/published/collections/index/hitachivantara/vspone_block/" -H "Authorization: Token $API_KEY"
         
         # Publish the collection
         docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace ghcr.io/${{ github.repository_owner }}/ansible-image:latest ansible-galaxy collection publish *.tar.gz --api-key $API_KEY
