--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,7 +54,7 @@ jobs:
     - name: Publish to Ansible Galaxy
       env:
         COLLECTION_NAME: "hitachivantara.vspone_block"
-        VERSION: "3.0.0"
+        VERSION: "3.0.1"
         API_KEY: ${{ secrets.ANSIBLE_COLLECTIONS_TOKEN }}
       run: |
         # Attempt to delete the existing collection (if supported)
@@ -66,4 +66,4 @@ jobs:
         sleep 60
 
         # Publish the collection
-        docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace ghcr.io/${{ github.repository_owner }}/ansible-image:latest ansible-galaxy collection publish *.tar.gz --api-key $API_KEY
+        #docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace ghcr.io/${{ github.repository_owner }}/ansible-image:latest ansible-galaxy collection publish *.tar.gz --api-key $API_KEY
