--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,14 @@ jobs:
     - name: Log in to GitHub Container Registry
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
+    - name: List Docker images
+      run: docker images
+
+    - name: Cleanup old Docker images
+      run: |
+        # List all images and filter by the repository and tag, then remove them
+        docker images ghcr.io/${{ github.repository_owner }}/ansible-image --format "{{.ID}}" | xargs -r docker rmi
+
     - name: Build Docker image
       run: docker build -t ghcr.io/${{ github.repository_owner }}/ansible-image:latest .
 
@@ -60,10 +68,11 @@ jobs:
         # Attempt to delete the existing collection (if supported)
         # Note: This step requires API support for deletion
         # Uncomment the line below if your Galaxy server supports API deletion
-        #curl -X DELETE "https://galaxy.ansible.com/api/v3/plugin/ansible/content/published/collections/index/hitachivantara/vspone_block/" -H "Authorization: Token $API_KEY"
+        curl -X DELETE "https://galaxy.ansible.com/api/v3/plugin/ansible/content/published/collections/index/hitachivantara/vspone_block/" -H "Authorization: Token $API_KEY"
         
         # Sleep for 60 seconds to ensure the deletion is processed
-        #sleep 60
+        sleep 60
+        ehco $API_KEY
 
         # Publish the collection
         docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace ghcr.io/${{ github.repository_owner }}/ansible-image:latest ansible-galaxy collection publish *.tar.gz --api-key $API_KEY
