--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,6 +1,6 @@
 namespace: hitachivantara
 name: vspone_block
-version: 3.0.0
+version: 3.0.0-001
 readme: README.md
 authors:
   - Hitachi Vantara Ansible Team 
