updated some code

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ playbooks.devtest/*
 rabi
 spec
 version.txt
-pylipylint_run_report.txt
+pylint_run_report.txt
 new_version.py
 get_session_id.py
 collection_build.sh
