--- a/playbooks/sds_block_direct/compute_port_facts.yml
+++ b/playbooks/sds_block_direct/compute_port_facts.yml
@@ -9,7 +9,7 @@
 
   tasks:
     - name: Get all compute ports
-      hv_sds_block_compute_port_facts:
+      hv_sds_block_port_facts:
         connection_info:
           address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
@@ -20,7 +20,7 @@
         var: result
 
     - name: Get compute port by name
-      hv_sds_block_compute_port_facts:
+      hv_sds_block_port_facts:
         connection_info:
           address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
@@ -33,7 +33,7 @@
         var: result
 
     - name: Get compute port by nickname
-      hv_sds_block_compute_port_facts:
+      hv_sds_block_port_facts:
         connection_info:
           address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
