--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,6 +1,6 @@
 namespace: hitachivantara
 name: vspone_block
-version: 3.1.114
+version: 3.1.0-223
 readme: README.md
 authors:
   - Hitachi Vantara Ansible Team 
