--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,77 +2,61 @@ name: Publish Ansible Collection
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - '*'  # Trigger on all GitHub tag pushes
   workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Log in to GitHub Container Registry
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-
-    - name: List Docker images
-      run: docker images
-
-    - name: Cleanup old Docker images
-      run: |
-        # List all images and filter by the repository and tag, then remove them
-        docker images ghcr.io/${{ github.repository_owner }}/ansible-image --format "{{.ID}}" | xargs -r docker rmi
-
-    - name: Build Docker image
-      run: docker build -t ghcr.io/${{ github.repository_owner }}/ansible-image:latest .
-
-    - name: Push Docker image to GitHub Container Registry
-      run: docker push ghcr.io/${{ github.repository_owner }}/ansible-image:latest
-
-    - name: Build Ansible Collection
-      run: docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace ghcr.io/${{ github.repository_owner }}/ansible-image:latest ansible-galaxy collection build --force
-
-    - name: Upload build artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: collection-tarball
-        path: |
-          *.tar.gz
-
   publish:
+    name: Publish Collection to Galaxy
     runs-on: ubuntu-latest
-    needs: build
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    - name: Log in to GitHub Container Registry
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      - name: Extract Version from galaxy.yml
+        id: get_version
+        run: |
+          VERSION=$(grep '^version:' galaxy.yml | awk '{print $2}')
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-    - name: Download build artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: collection-tarball
-        path: .
+      - name: Check If Version Exists on Galaxy
+        id: check_version
+        env:
+          COLLECTION_NAMESPACE: hitachivantara
+          COLLECTION_NAME: vspone_block
+          API_KEY: ${{ secrets.ANSIBLE_COLLECTIONS_TOKEN }}
+        run: |
+          COLLECTION_VERSION=$(curl -s -H "Authorization: Token $API_KEY" \
+            "https://galaxy.ansible.com/api/v3/plugin/ansible/content/published/collections/index/${COLLECTION_NAMESPACE}/${COLLECTION_NAME}/versions/" | \
+            jq -r '.data[].version' | grep -x "$VERSION" || echo "not_found")
 
-    - name: Pull Docker image from GitHub Container Registry
-      run: docker pull ghcr.io/${{ github.repository_owner }}/ansible-image:latest
+          if [[ "$COLLECTION_VERSION" == "not_found" ]]; then
+            echo "PUBLISH=true" >> $GITHUB_ENV
+          else
+            echo "PUBLISH=false" >> $GITHUB_ENV
+          fi
 
-    - name: Publish to Ansible Galaxy
-      env:
-        COLLECTION_NAME: "hitachivantara.vspone_block"
-        VERSION: "3.0.111"
-        API_KEY: ${{ secrets.ANSIBLE_COLLECTIONS_TOKEN }}
-      run: |
-        # Attempt to delete the existing collection (if supported)
-        # Note: This step requires API support for deletion
-        # Uncomment the line below if your Galaxy server supports API deletion
-        #curl -X DELETE "https://galaxy.ansible.com/api/v3/plugin/ansible/content/published/collections/index/hitachivantara/vspone_block/versions/3.2.5/" -H "Authorization: Token $API_KEY"
-        #curl -X DELETE "https://galaxy.ansible.com/api/v3/plugin/ansible/content/published/collections/index/hitachivantara/vspone_block/" -H "Authorization: Token $API_KEY"
-        
-        # Sleep for 60 seconds to ensure the deletion is processed
-        sleep 60
+      - name: Download Build Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: collection-tarball
+          path: .
 
-        # Publish the collection
-        #docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace ghcr.io/${{ github.repository_owner }}/ansible-image:latest ansible-galaxy collection publish *.tar.gz --api-key $API_KEY
+      - name: Set Up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install Ansible
+        run: pip install ansible
+
+      - name: Publish to Ansible Galaxy
+        if: env.PUBLISH == 'true'
+        env:
+          API_KEY: ${{ secrets.ANSIBLE_COLLECTIONS_TOKEN }}
+        run: ansible-galaxy collection publish *.tar.gz --api-key $API_KEY
+
+      - name: Skip Publish (Already Exists)
+        if: env.PUBLISH == 'false'
+        run: echo "Version $VERSION already exists on Ansible Galaxy. Skipping publish."
