--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -18,10 +18,11 @@ jobs:
       - name: Set Up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.x"
+          python-version: "3.10"
+          cache: "pip"
 
       - name: Install Ansible
-        run: pip install ansible
+        run: pip install ansible --disable-pip-version-check
 
       - name: Build Ansible Collection
         run: ansible-galaxy collection build --force
@@ -30,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: collection-tarball
-          path: "*.tar.gz"
+          path: "*.tar.gz"  # Change if using a build directory
 
   sanity:
     name: Sanity Tests (Ⓐ ${{ matrix.ansible }})
@@ -42,6 +43,7 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+
       - name: Run Sanity Tests
         uses: ansible-community/ansible-test-gh-action@release/v1
         with:
