--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish Ansible Collection
 on:
   push:
     tags:
-      - "v*"  # Triggers only when a version tag (e.g., v1.0.0) is pushed
+      - "*"  # Triggers only when a version tag is pushed
 
 jobs:
   verify_tests:
