--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,11 @@ name: Publish Ansible Collection
 on:
   push:
     tags:
-      - "*"  # Triggers only when a version tag is pushed
+      - "*"  # Triggers when a tag like v1.0.0 is pushed
+
+permissions:
+  contents: write
+  actions: read  # Ensure workflow status can be read
 
 jobs:
   verify_tests:
@@ -11,18 +15,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check Last Workflow Status
+      - name: Check Last CI Workflow Status
         id: check-tests
-        uses: octokit/request-action@v2.x
-        with:
-          route: GET /repos/{owner}/{repo}/actions/runs
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Parse Test Results
         run: |
-          latest_status=$(echo '${{ steps.check-tests.outputs.data }}' | jq -r '.workflow_runs[0].conclusion')
+          response=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+                           -H "Accept: application/vnd.github.v3+json" \
+                           "https://api.github.com/repos/${{ github.repository }}/actions/workflows/ansible-ci.yml/runs?branch=main&status=completed")
+          
+          latest_status=$(echo "$response" | jq -r '.workflow_runs[0].conclusion')
+
           echo "Latest test run status: $latest_status"
+
           if [[ "$latest_status" != "success" ]]; then
             echo "❌ Tests failed or not completed. Skipping publish."
             exit 1
@@ -30,29 +33,21 @@ jobs:
 
   publish:
     name: Publish Collection
-    needs: verify_tests  # Ensures publish only runs if tests passed
+    needs: verify_tests
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set Up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.x"
-
-      - name: Install Ansible Galaxy
-        run: pip install ansible
-
-      - name: Download Build Artifact
+      - name: Download Collection Artifact
         uses: actions/download-artifact@v4
         with:
           name: collection-tarball
+          path: dist/
 
-      - name: Extract Collection Name
-        id: extract-name
-        run: echo "COLLECTION_TAR=$(ls *.tar.gz)" >> $GITHUB_ENV
+      - name: Install Ansible Galaxy CLI
+        run: pip install ansible-core
 
       - name: Publish to Ansible Galaxy
-        run: ansible-galaxy collection publish $COLLECTION_TAR --api-key ${{ secrets.ANSIBLE_GALAXY_TOKEN }}
+        run: ansible-galaxy collection publish dist/*.tar.gz --api-key ${{ secrets.ANSIBLE_GALAXY_API_KEY }}
