--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,14 +18,17 @@ jobs:
       - name: Check Last CI Workflow Status
         id: check-tests
         run: |
+          # Fetch the latest CI workflow status for the ansible-test job
           response=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
                            -H "Accept: application/vnd.github.v3+json" \
                            "https://api.github.com/repos/${{ github.repository }}/actions/workflows/ansible-test.yml/runs?branch=main&status=completed")
           
+          # Extract the conclusion (status) of the latest workflow run
           latest_status=$(echo "$response" | jq -r '.workflow_runs[0].conclusion')
 
           echo "Latest test run status: $latest_status"
 
+          # If the tests did not pass, skip the publish job
           if [[ "$latest_status" != "success" ]]; then
             echo "❌ Tests failed or not completed. Skipping publish."
             exit 1
@@ -46,8 +49,23 @@ jobs:
           name: collection-tarball
           path: dist/
 
+      - name: Extract .tar.gz from .zip
+        run: |
+          # Change to the directory where the artifact is downloaded
+          cd dist
+          # Unzip the artifact to get the tarball
+          unzip collection-tarball.zip
+          # List the extracted files to confirm the presence of the tarball
+          ls -la
+
       - name: Install Ansible Galaxy CLI
         run: pip install ansible-core
 
       - name: Publish to Ansible Galaxy
-        run: ansible-galaxy collection publish dist/*.tar.gz --api-key ${{ secrets.ANSIBLE_GALAXY_API_KEY }}
+        run: |
+          # Find the extracted .tar.gz file (dynamic filename)
+          COLLECTION_FILE=$(ls *.tar.gz)
+          echo "Found collection file: $COLLECTION_FILE"
+          
+          # Publish to Ansible Galaxy using the extracted tarball
+          ansible-galaxy collection publish "$COLLECTION_FILE" --api-key ${{ secrets.ANSIBLE_GALAXY_API_KEY }}
